Fixed aligning lines on the front page

--- a/EstiemPortal6/Content/Site2.less
+++ b/EstiemPortal6/Content/Site2.less
@@ -23,6 +23,10 @@
     overflow:hidden;
 }
 
+.profile-events a{
+    color: @gray10;
+}
+
 .apply-now{
     background-color:@estiemgreen;
     float:right;
@@ -86,6 +90,7 @@ footer
     min-height:100%;
     position:relative;
     overflow:auto;
+    max-width: 960px;
 }
 
 html, body {
@@ -107,9 +112,14 @@ body {
 }
 .main-menu
 {
-    
     background-color: rgb(32,94,68);
     top: 0;
+    padding-left:30px;
+    padding-right:30px;
+}
+
+.greentext {
+    color:@estiemgreen;
 }
 
 .main-menu a 
